# stacshack

./: .gitignore  README.md
chat-rs/: Cargo.toml
chat-rs-client/: Cargo.toml
chat-rs-client/src/: main.rs
chat-rs/src/: main.rs
src/: predict.py  predict2.py  rec.ipynb  rec2.ipynb
src/models/: eigenface_pca_meow.pkl
