[package]
name = "chat-rs-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
nokhwa = { version = "0.10", features = ["input-native", "output-threaded"] }
image = "0.25"
eframe = "0.27"
egui = "0.27"